fix footer link alignment

--- a/css/application.css
+++ b/css/application.css
@@ -2791,6 +2791,13 @@ input[type="button"].btn-block {
   margin-bottom: 0;
   list-style: none; }
 
+.footer-menu, .menu{
+  margin:0;
+}
+#footer .menu-item {
+  padding-inline:0;
+}
+
 #navbar .menu-item{
   font-size:16px;
   text-transform: uppercase;
